--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
 
 <body>
     <!-- Custom cursor elements -->
-    <div class="cursor-dot"></div>
-    <div class="cursor-glow"></div>
+    <div class="cursor-wrapper">
+        <div class="cursor-glow"></div>
+        <div class="cursor-dot"></div>
+    </div>
+
 
     <div id="#root" class="page-container">
         <!-- nav bar -->
@@ -280,36 +283,36 @@
     <div class="container effect-scorlling">
         <h1>Contact</h1>
         <form class="contact-form">
-          <div class="form-group">
-            <input type="text" id="name" name="name" placeholder="Name *" required>
-          </div>
-          
-          <div class="form-row">
             <div class="form-group">
-              <input type="email" id="email" name="email" placeholder="E-mail address *" required>
+                <input type="text" id="name" name="name" placeholder="Name *" required>
             </div>
+
+            <div class="form-row">
+                <div class="form-group">
+                    <input type="email" id="email" name="email" placeholder="E-mail address *" required>
+                </div>
+                <div class="form-group">
+                    <input type="tel" id="phone" name="phone" placeholder="Phone number">
+                </div>
+            </div>
+
+            <div class="form-title">
+                <h2>What are your needs?</h2>
+            </div>
+
+            <div class="options-group">
+                <button type="button" class="option-button">Advice</button>
+                <button type="button" class="option-button">Web development</button>
+                <button type="button" class="option-button">Maintenance</button>
+            </div>
+
             <div class="form-group">
-              <input type="tel" id="phone" name="phone" placeholder="Phone number">
+                <textarea id="message" name="message" placeholder="Message *" required></textarea>
             </div>
-          </div>
-  
-          <div class="form-title">
-            <h2>What are your needs?</h2>
-          </div>
-  
-          <div class="options-group">
-            <button type="button" class="option-button">Advice</button>
-            <button type="button" class="option-button">Web development</button>
-            <button type="button" class="option-button">Maintenance</button>
-          </div>
-  
-          <div class="form-group">
-            <textarea id="message" name="message" placeholder="Message *" required></textarea>
-          </div>
-  
-          <button type="submit" class="submit-button">Send me your sweet words</button>
+
+            <button type="submit" class="submit-button">Send me your sweet words</button>
         </form>
-      </div>
+    </div>
 
 
     <!-- blog end -->
