fix path js and css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
     <title>Portfolio</title>
     <!-- style .css -->
-    <link rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <!-- remixe icon -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <!-- font awosme  -->
@@ -331,6 +331,6 @@
 
 
 </body>
-<script src="/src/js/main.js"></script>
+<script src="src/js/main.js"></script>
 
 </html>
