--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     illo maxime autem eos aperiam tempore adipisci quod inventore..</p>
                 <div class="btn-box">
                     <a id="hireBtn" href="#">Hire Me</a>
-                    <a href="/src/page/resume.html">Resume</a>
+                    <a href="src/page/resume.html">Resume</a>
                 </div>
             </div>
 
@@ -106,7 +106,7 @@
             <h1>About Me</h1>
             <div class="about-container">
                 <div class="about-image effect-scorlling">
-                    <img src="/assets/img/new images.jpg" alt="">
+                    <img src="assets/img/new images.jpg" alt="">
                 </div>
                 <div class="about-content effect-scorlling">
                     <p>Hi, I'm <span class="hight-light"> <strong> Ashish </strong></span>, a web developer and UI/UX
@@ -128,16 +128,16 @@
 
         <div class="skills-container">
             <div class="skill-card">
-                <img src="/assets/img/HTML5.png" alt="">
+                <img src="assets/img/HTML5.png" alt="">
             </div>
             <div class="skill-card">
-                <img src="/assets/img/CSS3.png" alt="">
+                <img src="assets/img/CSS3.png" alt="">
             </div>
             <div class="skill-card">
-                <img src="/assets/img/JavaScript.png" alt="">
+                <img src="assets/img/JavaScript.png" alt="">
             </div>
             <div class="skill-card">
-                <img src="/assets/img/Node.js.png" alt="">
+                <img src="assets/img/Node.js.png" alt="">
             </div>
         </div>
     </section>
@@ -150,7 +150,7 @@
             <!-- frist -->
             <div class="experience-item effect-scorlling">
                 <div class="date">
-                    <img src="/assets/img/exp1.jpg" alt="">
+                    <img src="assets/img/exp1.jpg" alt="">
                 </div>
                 <div class="details">
                     <h2>Senior Full Stack Developer - <span>Google Inc.</span></h2>
@@ -171,7 +171,7 @@
             <!-- Second  -->
             <div class="experience-item effect-scorlling">
                 <div class="date">
-                    <img src="/assets/img/exp2.jpg" alt="">
+                    <img src="assets/img/exp2.jpg" alt="">
                 </div>
                 <div class="details">
                     <h2>Frontend Developer - <span>Adobe</span></h2>
@@ -192,7 +192,7 @@
             <!-- thrd  -->
             <div class="experience-item effect-scorlling">
                 <div class="date">
-                    <img src="/assets/img/exp4.jpg" alt="">
+                    <img src="assets/img/exp4.jpg" alt="">
                 </div>
                 <div class="details">
                     <h2>Frontend Developer - <span>Adobe</span></h2>
